# sevenmark

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  FormatResult.sm  LICENSE  NOTICE  ParseResult.json  ParseResult_Monaco.json  PreprocessInfo.json  ProcessResult.json  ProcessedDocument.json  README.md  RenderResult.html  RenderResult_full.html  ToParse.sm  ToParse.txt  ToParse_escaped.txt  benchmark_mediawiki.py  docker-compose.yml  docker.env  make_request.py  package.json  sketch.txt  swagger.json  test.js  test.sm  test_complex_expr.txt  visualization.html  visualize.py  wasm-pack.toml  z.py
crates/sevenmark-html/: Cargo.toml  README.md
crates/sevenmark-html/examples/: render.rs
crates/sevenmark-html/src/: classes.rs  config.rs  context.rs  lib.rs  section.rs
crates/sevenmark-html/src/render/: document.rs  element.rs  mod.rs  utils.rs
crates/sevenmark-parser/: Cargo.toml  README.md
crates/sevenmark-parser/examples/: benchmark.rs  gen_expected.rs  parse.rs  svm_file.rs
crates/sevenmark-parser/src/: ast.rs  context.rs  core.rs  lib.rs
crates/sevenmark-parser/src/ast/: elements.rs  expression.rs  fold.rs  list.rs  location.rs  mod.rs  span.rs  table.rs  traversable.rs
crates/sevenmark-parser/src/brace/: brace_blockquote.rs  brace_category.rs  brace_fold.rs  brace_footnote.rs  brace_include.rs  brace_list.rs  brace_redirect.rs  brace_ruby.rs  brace_style.rs  brace_tex.rs
crates/sevenmark-parser/src/comment/: inline_comment.rs  multiline_comment.rs
crates/sevenmark-parser/src/macro/: macro_footnote.rs  macro_newline.rs  macro_null.rs  macro_variable.rs  mod.rs
crates/sevenmark-parser/src/markdown/: markdown_bold.rs  markdown_header.rs  markdown_hline.rs  (+2 more)
crates/sevenmark-parser/tests/: comprehensive_parser_tests.rs
crates/sevenmark-renderer/: Cargo.toml
crates/sevenmark-renderer/assets/: sevenmark.css
crates/sevenmark-renderer/examples/: render.rs
crates/sevenmark-renderer/scripts/: build_css.py
crates/sevenmark-renderer/src/: context.rs  lib.rs
crates/sevenmark-semantic/: Cargo.toml
crates/sevenmark-server/: Cargo.toml
crates/sevenmark-server/examples/: process.rs  render.rs
crates/sevenmark-server/src/: lib.rs  main.rs  state.rs
crates/sevenmark-transform/: Cargo.toml
crates/sevenmark-transform/examples/: debug_conversion.rs  debug_line_spans.rs  gen_codemirror_expected.rs  gen_monaco_expected.rs  monaco.rs
crates/sevenmark-transform/src/: expression_evaluator.rs  lib.rs  position_converter.rs  postprocessor.rs  preprocessor.rs  processor.rs  utf16_offset_converter.rs  utils.rs
crates/sevenmark-transform/tests/: codemirror_tests.rs  monaco_tests.rs
crates/sevenmark-utils/: Cargo.toml  README.md
crates/sevenmark-utils/src/: lib.rs
crates/sevenmark-wasm/: Cargo.toml
crates/sevenmark-wasm/src/: lib.rs
crates/sevenmark_ast/: Cargo.toml  README.md
crates/sevenmark_ast/src/: elements.rs  lib.rs  list.rs  remap.rs  span.rs  table.rs  traversable.rs
crates/sevenmark_formatter/: Cargo.toml  README.md
crates/sevenmark_formatter/examples/: format.rs
crates/sevenmark_formatter/src/: config.rs  lib.rs
crates/sevenmark_html/: Cargo.toml  README.md
crates/sevenmark_html/examples/: render.rs
crates/sevenmark_html/src/: classes.rs  config.rs  context.rs  lib.rs  section.rs  test_support.rs
crates/sevenmark_html/tests/: render_fixtures.rs
crates/sevenmark_language_server/: Cargo.toml  README.md
crates/sevenmark_language_server/src/: ast_walk.rs  backend.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  folding.rs  hover.rs  main.rs  semantic_tokens.rs
crates/sevenmark_lsp_core/: Cargo.toml
crates/sevenmark_lsp_core/src/: ast_walk.rs  completion.rs  definition.rs  diagnostics.rs  document.rs  folding.rs  hover.rs  lib.rs  semantic_tokens.rs  server_state.rs  symbols.rs
crates/sevenmark_parser/: Cargo.toml
crates/sevenmark_parser/examples/: benchmark.rs  gen_expected.rs  parse.rs
crates/sevenmark_parser/src/: context.rs  core.rs  error.rs  lib.rs
crates/sevenmark_parser/tests/: comprehensive_parser_tests.rs
crates/sevenmark_semantic/: Cargo.toml
crates/sevenmark_server/: Cargo.toml
crates/sevenmark_server/examples/: process.rs  render.rs
crates/sevenmark_server/src/: main.rs
crates/sevenmark_transform/: Cargo.toml
crates/sevenmark_transform/src/: expression_evaluator.rs  lib.rs  postprocessor.rs  preprocessor.rs  processor.rs  text_utils.rs  utils.rs
crates/sevenmark_utils/: Cargo.toml  README.md
crates/sevenmark_utils/src/: lib.rs  line_index.rs  text.rs  utf16_offset_converter.rs
crates/sevenmark_wasm/: Cargo.toml  README.npm.md  wasm-pack.toml
crates/sevenmark_wasm/examples/: gen_codemirror_expected.rs
crates/sevenmark_wasm/src/: lib.rs
crates/sevenmark_wasm/tests/: codemirror_tests.rs
crates/sevenmark_wasm_lsp/: Cargo.toml  README.npm.md  wasm-pack.toml
crates/sevenmark_wasm_lsp/src/: lib.rs
sevenmark-parser/: Cargo.toml
sevenmark-parser/examples/: benchmark.rs  gen_expected.rs
sevenmark-parser/src/: ast.rs  context.rs  core.rs  lib.rs
sevenmark-parser/src/ast/: elements.rs  expression.rs  list.rs  location.rs  mod.rs  table.rs  traversable.rs
sevenmark-parser/src/parser/: document.rs  element.rs
sevenmark-parser/tests/: comprehensive_parser_tests.rs
sevenmark-server/: Cargo.toml
sevenmark-server/examples/: process.rs
sevenmark-server/src/: lib.rs  main.rs
sevenmark-server/src/api/: mod.rs  routes.rs
sevenmark-server/src/config/: db_config.rs  server_config.rs
sevenmark-server/src/connection/: database.rs  database_conn.rs  mod.rs
sevenmark-server/src/errors/: errors.rs  mod.rs
sevenmark-server/src/sevenmark/: core.rs  mod.rs
sevenmark-server/src/utils/: logger.rs
sevenmark-transform/: Cargo.toml
sevenmark-transform/examples/: gen_monaco_expected.rs  monaco.rs
sevenmark-transform/src/: expression_evaluator.rs  lib.rs  position_converter.rs  postprocessor.rs  preprocessor.rs  processor.rs
sevenmark-transform/tests/: monaco_tests.rs
(+885 files in other folders)
