[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
version = "2.20.5"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/sevenwiki/sevenmark"
description = "High-performance wiki markup language powering SevenWiki"
edition = "2024"
rust-version = "1.93.0"
keywords = ["parser", "wiki", "markup", "ast"]
categories = ["parsing", "text-processing"]
readme = "README.md"

[workspace.dependencies]
# Internal crates
sevenmark-parser = { path = "crates/sevenmark-parser", version = "2.20.5" }
sevenmark-transform = { path = "crates/sevenmark-transform", version = "2.20.5" }
sevenmark-html = { path="crates/sevenmark-html", version = "2.20.5"}
sevenmark-semantic = { path = "crates/sevenmark-semantic", version = "2.20.5"}
sevenmark-utils = {path = "crates/sevenmark-utils", version = "2.20.5"}
sevenmark-wasm = {path = "crates/sevenmark-wasm", version = "2.20.5"}

winnow = { version = "0.7.14", features = ["simd"] }
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sea-orm = { version = "2.0.0-rc.30", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
axum = { version = "0.8.8", features = ["multipart", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "openapi_extensions", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"] }
uuid = { version = "1.20.0", features = ["v7"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"

# SeaweedFS (S3 compatible)
aws-sdk-s3 = "1.121.0"
aws-config = "1.8.12"
zstd = "0.13.3"
futures="0.3.31"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
wasm-bindgen = "0.2.108"
js-sys = "0.3.85"
web-sys = "0.3.85"
maud="0.27.0"

[profile.dev]
opt-level = 1