[package]
name = "sevenmark-parser"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
winnow = { version = "0.7.13", features = ["simd"] }
line-span = "0.1.5"
paste = "1.0.15"

# Shared
serde = { workspace = true }
serde_json = { workspace = true }

# WASM (optional)
wasm-bindgen = { version = "0.2.105", optional = true }
js-sys = { version = "0.3.82", optional = true }
web-sys = { version = "0.3.82", optional = true }

[features]
default = []
include_locations = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[lib]
crate-type = ["cdylib", "rlib"]