[package]
name = "sevenmark-parser"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "sevenmark/parser"

[dependencies]
winnow = { version = "0.7.14", features = ["simd"] }
line-span = "0.1.5"
paste = "1.0.15"

# Shared
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
include_locations = []

[[test]]
name = "comprehensive_parser_tests"
required-features = ["include_locations"]