[package]
name = "sevenmark-transform"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
sevenmark-parser = { workspace = true }

# Database & HTTP
sea-orm = { workspace = true }
uuid = { version = "1.18.1" }

# Utilities
line-span = "0.1.5"
utoipa = { version = "5.4.0", features = ["axum_extras", "openapi_extensions", "time"] }

# Shared
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[features]
default = []