[package]
name = "sevenmark-html"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTML renderer for SevenMark AST"
readme = "README.md"

[dependencies]
# Internal
sevenmark-parser = { workspace = true }
sevenmark-utils = { workspace = true }

# HTML rendering
maud = { workspace = true }
percent-encoding = { workspace = true }
