[package]
name = "sevenmark-parser"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "sevenmark/parser"

[dependencies]
winnow = { workspace = true }
line-span = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
include_locations = []

[[test]]
name = "comprehensive_parser_tests"
required-features = ["include_locations"]