[package]
name = "sevenmark-renderer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTML renderer for SevenMark AST"

[dependencies]
# Internal
sevenmark-parser = { workspace = true }

# HTML rendering
maud = { workspace = true }

# Shared
chrono = { workspace = true }
