[package]
name = "sevenmark-server"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "sevenmark/server"

[dependencies]
# Internal
sevenmark-parser = { workspace = true, features = ["include_locations"] }
sevenmark-transform = { workspace = true }
sevenmark-html = { workspace = true }

# Web framework
axum = { workspace = true }
tokio = { workspace = true }

# Database
sea-orm = { workspace = true }

# AWS S3 (SeaweedFS)
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# API documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Utilities
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Shared
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "sevenmark-server"
path = "src/main.rs"