[package]
name = "sevenmark-transform"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "sevenmark/transform"

[dependencies]
# Internal
sevenmark-parser = { workspace = true }

# Database & HTTP (optional, server only)
sea-orm = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Utilities
line-span = { workspace = true }
utoipa = { workspace = true, optional = true }

# Shared
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true, optional = true }

# SeaweedFS (optional, server only)
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# WASM (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = []
server = ["sea-orm", "uuid", "utoipa", "tracing", "aws-sdk-s3", "aws-config", "zstd"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "sevenmark-parser/include_locations"]

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "monaco_tests"
required-features = ["sevenmark-parser/include_locations"]