[package]
name = "sevenmark-transform"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "sevenmark/transform"

[dependencies]
# Internal
sevenmark-parser = { workspace = true }

# Database
sea-orm = { workspace = true }
uuid = { workspace = true }

# Utilities
utoipa = { workspace = true }
tracing = { workspace = true }

# Shared
serde = { workspace = true }
anyhow = { workspace = true }

# SeaweedFS
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
zstd = { workspace = true }
futures = { workspace = true }