[package]
name = "sevenmark-transform"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "sevenmark/transform"

[dependencies]
# Internal crates
sevenmark-parser = { workspace = true }

# External dependencies
sea-orm = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
aws-sdk-s3 = { workspace = true }
zstd = { workspace = true }
futures = { workspace = true }