[package]
name = "sevenmark-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared utilities for SevenMark crates"

[dependencies]
sevenmark-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
