[package]
name = "sevenmark-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared utilities for SevenMark crates"
readme = "README.md"

[dependencies]
# Internal crates
sevenmark-parser = { workspace = true }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
