[package]
name = "sevenmark-wasm"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for SevenMark parser"

[dependencies]
# Internal crates
sevenmark-parser = { workspace = true, features = ["include_locations"] }
sevenmark-utils = { workspace = true }

# External dependencies
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
