[package]
name = "sevenmark_ast"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "AST types for SevenMark wiki markup"
readme = "README.md"

[dependencies]
serde = { workspace = true }

[features]
default = []
include_locations = []