[package]
name = "sevenmark_formatter"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Source code formatter for SevenMark AST"
readme = "README.md"

[dependencies]
sevenmark_ast = { workspace = true }
pretty = { workspace = true }

[dev-dependencies]
sevenmark_parser = { workspace = true }
sevenmark_html = { workspace = true }
serde_json = { workspace = true }
