[package]
name = "sevenmark_html"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTML renderer for SevenMark AST"
readme = "README.md"

[dependencies]
# Internal
sevenmark_ast = { workspace = true }
sevenmark_parser = { workspace = true }
sevenmark_utils = { workspace = true }

# External dependencies
maud = { workspace = true }
percent-encoding = { workspace = true }
