[package]
name = "sevenmark_wasm_lsp"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for the SevenMark LSP"

[dependencies]
# Internal crates
sevenmark_lsp_core = { workspace = true }

# External dependencies
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
